[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "test_langgraph"
version = "0.1.0"
description = "Test library for LangGraph framework"
authors = [{name = "Robert Tartarotti", email = "robert.tartarotti@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "langgraph",
    "langchain-openai",
    "common",
]

[project.scripts]
start_langgraph = "test_langgraph.main:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
    "pre-commit",
]

[project.urls]
Homepage = "https://github.com/test/test_langgraph"
Repository = "https://github.com/test/test_langgraph.git"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.black]
line-length = 100
target-version = ['py38'] 